--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,11 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">ParaBankingSuite</th></tr>
-<tr><td><a href="#t0">ParaBanking Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">18,363</td><td></td><td></td></tr>
+<tr><td><a href="#t0">ParaBanking Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">13,495</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">ParaBankingSuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">ParaBanking Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testCases.TC001_RegisterTestCase</td><td><a href="#m0">RegisterTest</a></td><td rowspan="1">1758721649735</td><td rowspan="1">1822</td></tr><tr class="passedodd"><td rowspan="1">testCases.TC002_LoginTestCase</td><td><a href="#m1">loginTest</a></td><td rowspan="1">1758721653735</td><td rowspan="1">4550</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">ParaBankingSuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">ParaBanking Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testCases.TC003_OpenNewAccountTestCase</td><td><a href="#m0">OpenNewAccountTest</a></td><td rowspan="1">1758726055953</td><td rowspan="1">6247</td></tr></tbody>
 </table>
-<h2>ParaBanking Test</h2><h3 id="m0">testCases.TC001_RegisterTestCase#RegisterTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">testCases.TC002_LoginTestCase#loginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>ParaBanking Test</h2><h3 id="m0">testCases.TC003_OpenNewAccountTestCase#OpenNewAccountTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
