--- a/test-output/index.html
+++ b/test-output/index.html
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-ParaBankingSuite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-ParaBankingSuite" title="testCases.TC003_OpenNewAccountTestCase" class="method navigator-link" hash-for-method="OpenNewAccountTest">OpenNewAccountTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-ParaBankingSuite" title="testCases.TC004_TransferFundsTestCase" class="method navigator-link" hash-for-method="TransferFundsWithoutAmountTest">TransferFundsWithoutAmountTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-ParaBankingSuite -->
@@ -121,14 +121,14 @@
           <div class="suite-ParaBankingSuite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testCases.TC003_OpenNewAccountTestCase</span>
+              <span class="class-name">testCases.TC004_TransferFundsTestCase</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="OpenNewAccountTest">
-                  </a> <!-- OpenNewAccountTest -->
-                  <span class="method-name">OpenNewAccountTest</span>
+                  <a name="TransferFundsWithoutAmountTest">
+                  </a> <!-- TransferFundsWithoutAmountTest -->
+                  <span class="method-name">TransferFundsWithoutAmountTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -150,7 +150,7 @@
     &lt;parameter name=&quot;os&quot; value=&quot;Windows&quot;/&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testCases.TC003_OpenNewAccountTestCase&quot;/&gt;
+      &lt;class name=&quot;testCases.TC004_TransferFundsTestCase&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- ParaBanking Test --&gt;
 &lt;/suite&gt; &lt;!-- ParaBankingSuite --&gt;
@@ -192,14 +192,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'OpenNewAccountTest')
-data.setCell(0, 2, 'testCases.TC003_OpenNewAccountTestCase')
-data.setCell(0, 3, 6247);
+data.setCell(0, 1, 'TransferFundsWithoutAmountTest')
+data.setCell(0, 2, 'testCases.TC004_TransferFundsTestCase')
+data.setCell(0, 3, 13457);
 window.suiteTableData['ParaBankingSuite']= { tableData: data, tableDiv: 'times-div-ParaBankingSuite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 6 seconds</span>
+              <span class="suite-total-time">Total running time: 13 seconds</span>
               <div id="times-div-ParaBankingSuite">
               </div> <!-- times-div-ParaBankingSuite -->
             </div> <!-- times-div -->
@@ -225,18 +225,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testCases.TC003_OpenNewAccountTestCase</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testCases.TC004_TransferFundsTestCase</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setup(Windows, chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">OpenNewAccountTest</span>
-                <span class="method-start">6448 ms</span>
+                <span class="method-name">TransferFundsWithoutAmountTest</span>
+                <span class="method-start">2737 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">12725 ms</span>
+                <span class="method-start">16216 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
