--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,14 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">ParaBankingSuite</th></tr>
-<tr><td><a href="#t0">ParaBanking Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">15,533</td><td></td><td></td></tr>
+<tr><td><a href="#t0">ParaBanking Test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">50,437</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">ParaBankingSuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">ParaBanking Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testCases.TC006_ApplyLoanTest</td><td><a href="#m0">VerifyApplyLoan</a></td><td rowspan="1">1758734311058</td><td rowspan="1">6739</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">ParaBankingSuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">ParaBanking Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">testCases.TC007_LoginDDT</td><td><a href="#m0">verify_Loginddt</a></td><td rowspan="5">1758735367550</td><td rowspan="5">12379</td></tr><tr class="passedeven"><td><a href="#m1">verify_Loginddt</a></td></tr><tr class="passedeven"><td><a href="#m2">verify_Loginddt</a></td></tr><tr class="passedeven"><td><a href="#m3">verify_Loginddt</a></td></tr><tr class="passedeven"><td><a href="#m4">verify_Loginddt</a></td></tr></tbody>
 </table>
-<h2>ParaBanking Test</h2><h3 id="m0">testCases.TC006_ApplyLoanTest#VerifyApplyLoan</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>ParaBanking Test</h2><h3 id="m0">testCases.TC007_LoginDDT#verify_Loginddt</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>gabi</td><td>falco</td><td>Invalid</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">testCases.TC007_LoginDDT#verify_Loginddt</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>mikasa@06</td><td>eren</td><td>valid</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">testCases.TC007_LoginDDT#verify_Loginddt</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>jiraya</td><td>leaf</td><td>Invalid</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">testCases.TC007_LoginDDT#verify_Loginddt</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>naruto</td><td>hinata</td><td>valid</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">testCases.TC007_LoginDDT#verify_Loginddt</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>levi</td><td>hange</td><td>Invalid</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
