--- a/test-output/index.html
+++ b/test-output/index.html
@@ -60,7 +60,7 @@
                 </li>
                 <li>
                   <a href="#" panel-name="group-ParaBankingSuite" class="navigator-link ">
-                    <span>0 groups</span>
+                    <span>1 group</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">5 methods,   5 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,7 +103,27 @@
                     <div class="method-list-content passed suite-ParaBankingSuite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-ParaBankingSuite" title="testCases.TC006_ApplyLoanTest" class="method navigator-link" hash-for-method="VerifyApplyLoan">VerifyApplyLoan</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-ParaBankingSuite" title="testCases.TC007_LoginDDT" class="method navigator-link" hash-for-method="verify_Loginddt(gabi, falco, Invalid)">verify_Loginddt(gabi, falco, Invalid)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-ParaBankingSuite" title="testCases.TC007_LoginDDT" class="method navigator-link" hash-for-method="verify_Loginddt(mikasa@06, eren, valid)">verify_Loginddt(mikasa@06, eren, valid)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-ParaBankingSuite" title="testCases.TC007_LoginDDT" class="method navigator-link" hash-for-method="verify_Loginddt(jiraya, leaf, Invalid)">verify_Loginddt(jiraya, leaf, Invalid)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-ParaBankingSuite" title="testCases.TC007_LoginDDT" class="method navigator-link" hash-for-method="verify_Loginddt(naruto, hinata, valid)">verify_Loginddt(naruto, hinata, valid)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-ParaBankingSuite" title="testCases.TC007_LoginDDT" class="method navigator-link" hash-for-method="verify_Loginddt(levi, hange, Invalid)">verify_Loginddt(levi, hange, Invalid)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-ParaBankingSuite -->
@@ -121,14 +141,47 @@
           <div class="suite-ParaBankingSuite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testCases.TC006_ApplyLoanTest</span>
+              <span class="class-name">testCases.TC007_LoginDDT</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="VerifyApplyLoan">
-                  </a> <!-- VerifyApplyLoan -->
-                  <span class="method-name">VerifyApplyLoan</span>
+                  <a name="verify_Loginddt(gabi, falco, Invalid)">
+                  </a> <!-- verify_Loginddt(gabi, falco, Invalid) -->
+                  <span class="method-name">verify_Loginddt</span>
+                  <span class="parameters">(gabi,falco,Invalid)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verify_Loginddt(mikasa@06, eren, valid)">
+                  </a> <!-- verify_Loginddt(mikasa@06, eren, valid) -->
+                  <span class="method-name">verify_Loginddt</span>
+                  <span class="parameters">(mikasa@06,eren,valid)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verify_Loginddt(jiraya, leaf, Invalid)">
+                  </a> <!-- verify_Loginddt(jiraya, leaf, Invalid) -->
+                  <span class="method-name">verify_Loginddt</span>
+                  <span class="parameters">(jiraya,leaf,Invalid)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verify_Loginddt(naruto, hinata, valid)">
+                  </a> <!-- verify_Loginddt(naruto, hinata, valid) -->
+                  <span class="method-name">verify_Loginddt</span>
+                  <span class="parameters">(naruto,hinata,valid)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verify_Loginddt(levi, hange, Invalid)">
+                  </a> <!-- verify_Loginddt(levi, hange, Invalid) -->
+                  <span class="method-name">verify_Loginddt</span>
+                  <span class="parameters">(levi,hange,Invalid)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -150,7 +203,7 @@
     &lt;parameter name=&quot;os&quot; value=&quot;Windows&quot;/&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testCases.TC006_ApplyLoanTest&quot;/&gt;
+      &lt;class name=&quot;testCases.TC007_LoginDDT&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- ParaBanking Test --&gt;
 &lt;/suite&gt; &lt;!-- ParaBankingSuite --&gt;
@@ -174,6 +227,14 @@
             <span class="header-content">Groups for ParaBankingSuite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="test-group">
+              <span class="test-group-name">Datadriven</span>
+              <br/>
+              <div class="method-in-group">
+                <span class="method-in-group-name">verify_Loginddt</span>
+                <br/>
+              </div> <!-- method-in-group -->
+            </div> <!-- test-group -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="times-ParaBankingSuite" class="panel">
@@ -190,16 +251,32 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(5);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'VerifyApplyLoan')
-data.setCell(0, 2, 'testCases.TC006_ApplyLoanTest')
-data.setCell(0, 3, 6739);
+data.setCell(0, 1, 'verify_Loginddt')
+data.setCell(0, 2, 'testCases.TC007_LoginDDT')
+data.setCell(0, 3, 12379);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'verify_Loginddt')
+data.setCell(1, 2, 'testCases.TC007_LoginDDT')
+data.setCell(1, 3, 12355);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'verify_Loginddt')
+data.setCell(2, 2, 'testCases.TC007_LoginDDT')
+data.setCell(2, 3, 12292);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'verify_Loginddt')
+data.setCell(3, 2, 'testCases.TC007_LoginDDT')
+data.setCell(3, 3, 2999);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'verify_Loginddt')
+data.setCell(4, 2, 'testCases.TC007_LoginDDT')
+data.setCell(4, 3, 2584);
 window.suiteTableData['ParaBankingSuite']= { tableData: data, tableDiv: 'times-div-ParaBankingSuite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 6 seconds</span>
+              <span class="suite-total-time">Total running time: 42 seconds</span>
               <div id="times-div-ParaBankingSuite">
               </div> <!-- times-div-ParaBankingSuite -->
             </div> <!-- times-div -->
@@ -225,18 +302,34 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testCases.TC006_ApplyLoanTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testCases.TC007_LoginDDT</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setup(Windows, chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">VerifyApplyLoan</span>
-                <span class="method-start">8094 ms</span>
+                <span class="method-name">verify_Loginddt(mikasa@06, eren, valid)</span>
+                <span class="method-start">7006 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">verify_Loginddt(gabi, falco, Invalid)</span>
+                <span class="method-start">10041 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">verify_Loginddt(jiraya, leaf, Invalid)</span>
+                <span class="method-start">22424 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">verify_Loginddt(naruto, hinata, valid)</span>
+                <span class="method-start">34782 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">verify_Loginddt(levi, hange, Invalid)</span>
+                <span class="method-start">37377 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">14847 ms</span>
+                <span class="method-start">49674 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
