addeed accountsoverview testcase

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-ParaBankingSuite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-ParaBankingSuite" title="testCases.TC009_FooterTest" class="method navigator-link" hash-for-method="VerifyFooterSection">VerifyFooterSection</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-ParaBankingSuite" title="testCases.TC010_AccountOverview" class="method navigator-link" hash-for-method="VerifyAccountOverview">VerifyAccountOverview</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-ParaBankingSuite -->
@@ -121,14 +121,14 @@
           <div class="suite-ParaBankingSuite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testCases.TC009_FooterTest</span>
+              <span class="class-name">testCases.TC010_AccountOverview</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="VerifyFooterSection">
-                  </a> <!-- VerifyFooterSection -->
-                  <span class="method-name">VerifyFooterSection</span>
+                  <a name="VerifyAccountOverview">
+                  </a> <!-- VerifyAccountOverview -->
+                  <span class="method-name">VerifyAccountOverview</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -150,7 +150,7 @@
     &lt;parameter name=&quot;os&quot; value=&quot;Windows&quot;/&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testCases.TC009_FooterTest&quot;/&gt;
+      &lt;class name=&quot;testCases.TC010_AccountOverview&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- ParaBanking Test --&gt;
 &lt;/suite&gt; &lt;!-- ParaBankingSuite --&gt;
@@ -192,14 +192,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'VerifyFooterSection')
-data.setCell(0, 2, 'testCases.TC009_FooterTest')
-data.setCell(0, 3, 14528);
+data.setCell(0, 1, 'VerifyAccountOverview')
+data.setCell(0, 2, 'testCases.TC010_AccountOverview')
+data.setCell(0, 3, 5777);
 window.suiteTableData['ParaBankingSuite']= { tableData: data, tableDiv: 'times-div-ParaBankingSuite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 14 seconds</span>
+              <span class="suite-total-time">Total running time: 5 seconds</span>
               <div id="times-div-ParaBankingSuite">
               </div> <!-- times-div-ParaBankingSuite -->
             </div> <!-- times-div -->
@@ -225,18 +225,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testCases.TC009_FooterTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testCases.TC010_AccountOverview</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setup(Windows, chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">VerifyFooterSection</span>
-                <span class="method-start">3562 ms</span>
+                <span class="method-name">VerifyAccountOverview</span>
+                <span class="method-start">3173 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">18117 ms</span>
+                <span class="method-start">8976 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
