--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">ParaBankingSuite</th></tr>
-<tr><td><a href="#t0">ParaBanking Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">9,585</td><td></td><td></td></tr>
+<tr><td><a href="#t0">ParaBanking Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">14,181</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">ParaBankingSuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">ParaBanking Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testCases.TC010_AccountOverview</td><td><a href="#m0">VerifyAccountOverview</a></td><td rowspan="1">1760114552423</td><td rowspan="1">5777</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">ParaBankingSuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">ParaBanking Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testCases.TC010_AccountOverview</td><td><a href="#m0">verifyAccountOverview</a></td><td rowspan="1">1760117030103</td><td rowspan="1">9322</td></tr></tbody>
 </table>
-<h2>ParaBanking Test</h2><h3 id="m0">testCases.TC010_AccountOverview#VerifyAccountOverview</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>ParaBanking Test</h2><h3 id="m0">testCases.TC010_AccountOverview#verifyAccountOverview</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
